--- a/index.html
+++ b/index.html
@@ -489,6 +489,11 @@
                 font-size: 1.2rem;
             }
         }
+
+        .avatar-img {
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 
