--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       }
 
       .avatar-container {
-        width: 220px;
-        height: 288px;
+        width: 183px;
+        height: 193px;
         margin: 0 auto 10px;
         border-radius: 50%;
         border: 3px solid rgba(255, 255, 255, 0.9);
@@ -492,8 +492,7 @@
 
       .avatar-img {
         width: 220px !important;
-        height: auto;
-        object-fit: fill;
+        object-fit: cover;
       }
     </style>
   </head>
